--- a/libfsrefs.ini
+++ b/libfsrefs.ini
@@ -7,11 +7,11 @@ documentation_url: "https://github.com/libyal/libfsrefs/tree/main/documentation"
 features: ["debug_output"]
 
 [library]
-description: "Library to access the Windows Resiliant File System (REFS) format"
+description: "Library to access the Resiliant File System (ReFS) format"
 public_types: ["file_entry", "volume"]
 
 [tools]
-description: "Several tools for reading Windows Resiliant File System (REFS) volumes"
+description: "Several tools for reading Resiliant File System (ReFS) volumes"
 names: ["fsrefsinfo"]
 
 [tests]
