--- a/libfsrefs/libfsrefs.rc.in
+++ b/libfsrefs/libfsrefs.rc.in
@@ -21,7 +21,7 @@ BEGIN
   BEGIN
     BLOCK "040904E4"
     BEGIN
-      VALUE "FileDescription",		"Library to access the Windows Resiliant File System (REFS) format\0"
+      VALUE "FileDescription",		"Library to access the Resiliant File System (ReFS) format\0"
       VALUE "FileVersion",		"@VERSION@" "\0"
       VALUE "InternalName",		"libfsrefs.dll\0"
       VALUE "LegalCopyright",		"(C) 2012-2023, Joachim Metz <joachim.metz@gmail.com>\0"
