--- a/libfsrefs/libfsrefs_definitions.h.in
+++ b/libfsrefs/libfsrefs_definitions.h.in
@@ -92,5 +92,7 @@ enum LIBFSREFS_FILE_ATTRIBUTE_FLAGS
 
 #endif /* !defined( HAVE_LOCAL_LIBFSREFS ) */
 
+#define LIBFSREFS_BLOCK_TREE_NUMBER_OF_SUB_NODES		256
+
 #endif /* !defined( _LIBFSREFS_INTERNAL_DEFINITIONS_H ) */
 
