--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -36,6 +36,9 @@ EXTRA_DIST = \
 
 check_PROGRAMS = \
 	fsrefs_test_block_descriptor \
+	fsrefs_test_block_reference \
+	fsrefs_test_block_tree \
+	fsrefs_test_block_tree_node \
 	fsrefs_test_checkpoint \
 	fsrefs_test_directory_object \
 	fsrefs_test_error \
@@ -66,6 +69,42 @@ fsrefs_test_block_descriptor_SOURCES = \
 	fsrefs_test_unused.h
 
 fsrefs_test_block_descriptor_LDADD = \
+	../libfsrefs/libfsrefs.la \
+	@LIBCERROR_LIBADD@
+
+fsrefs_test_block_reference_SOURCES = \
+	fsrefs_test_block_reference.c \
+	fsrefs_test_libcerror.h \
+	fsrefs_test_libfsrefs.h \
+	fsrefs_test_macros.h \
+	fsrefs_test_memory.c fsrefs_test_memory.h \
+	fsrefs_test_unused.h
+
+fsrefs_test_block_reference_LDADD = \
+	../libfsrefs/libfsrefs.la \
+	@LIBCERROR_LIBADD@
+
+fsrefs_test_block_tree_SOURCES = \
+	fsrefs_test_block_tree.c \
+	fsrefs_test_libcerror.h \
+	fsrefs_test_libfsrefs.h \
+	fsrefs_test_macros.h \
+	fsrefs_test_memory.c fsrefs_test_memory.h \
+	fsrefs_test_unused.h
+
+fsrefs_test_block_tree_LDADD = \
+	../libfsrefs/libfsrefs.la \
+	@LIBCERROR_LIBADD@
+
+fsrefs_test_block_tree_node_SOURCES = \
+	fsrefs_test_block_tree_node.c \
+	fsrefs_test_libcerror.h \
+	fsrefs_test_libfsrefs.h \
+	fsrefs_test_macros.h \
+	fsrefs_test_memory.c fsrefs_test_memory.h \
+	fsrefs_test_unused.h
+
+fsrefs_test_block_tree_node_LDADD = \
 	../libfsrefs/libfsrefs.la \
 	@LIBCERROR_LIBADD@
 
