--- a/include/libfsrefs.h.in
+++ b/include/libfsrefs.h.in
@@ -406,6 +406,7 @@ int libfsrefs_file_entry_get_file_attribute_flags(
      libfsrefs_error_t **error );
 
 /* Retrieves the size of the UTF-8 encoded name
+ * This function uses UTF-8 RFC 2279 (or 6-byte UTF-8) to support characters outside Unicode
  * The returned size includes the end of string character
  * Returns 1 if successful, 0 if not available or -1 on error
  */
@@ -416,6 +417,7 @@ int libfsrefs_file_entry_get_utf8_name_size(
      libfsrefs_error_t **error );
 
 /* Retrieves the UTF-8 encoded name
+ * This function uses UTF-8 RFC 2279 (or 6-byte UTF-8) to support characters outside Unicode
  * The size should include the end of string character
  * Returns 1 if successful, 0 if not available or -1 on error
  */
@@ -427,6 +429,7 @@ int libfsrefs_file_entry_get_utf8_name(
      libfsrefs_error_t **error );
 
 /* Retrieves the size of the UTF-16 encoded name
+ * This function uses UCS-2 (with surrogates) to support characters outside Unicode
  * The returned size includes the end of string character
  * Returns 1 if successful, 0 if not available or -1 on error
  */
@@ -437,6 +440,7 @@ int libfsrefs_file_entry_get_utf16_name_size(
      libfsrefs_error_t **error );
 
 /* Retrieves the UTF-16 encoded name
+ * This function uses UCS-2 (with surrogates) to support characters outside Unicode
  * The size should include the end of string character
  * Returns 1 if successful, 0 if not available or -1 on error
  */
