--- a/libfsrefs/Makefile.am
+++ b/libfsrefs/Makefile.am
@@ -1,6 +1,6 @@
 AM_CPPFLAGS = \
-	-I$(top_srcdir)/include \
-	-I$(top_srcdir)/common \
+	-I../include -I$(top_srcdir)/include \
+	-I../common -I$(top_srcdir)/common \
 	@LIBCERROR_CPPFLAGS@ \
 	@LIBCTHREADS_CPPFLAGS@ \
 	@LIBCDATA_CPPFLAGS@ \
@@ -96,13 +96,11 @@ EXTRA_DIST = \
 	libfsrefs.rc \
 	libfsrefs.rc.in
 
-MAINTAINERCLEANFILES = \
+DISTCLEANFILES = \
+	libfsrefs_definitions.h \
+	libfsrefs.rc \
+	Makefile \
 	Makefile.in
-
-distclean: clean
-	-rm -f libfsrefs_definitions.h
-	-rm -f libfsrefs.rc
-	-rm -f Makefile
 
 sources-local: $(BUILT_SOURCES)
 
