--- a/libfsrefs.ini
+++ b/libfsrefs.ini
@@ -14,6 +14,10 @@ public_types: ["file_entry", "volume"]
 description: "Several tools for reading Resiliant File System (ReFS) volumes"
 names: ["fsrefsinfo"]
 
+[info_tool]
+source_description: "a Resiliant File System (ReFS) volume"
+source_type: "volume"
+
 [tests]
 profiles: ["libfsrefs", "fsrefsinfo"]
 option_sets: ["offset"]
