--- a/libfsrefs.ini
+++ b/libfsrefs.ini
@@ -4,10 +4,11 @@ name: "libfsrefs"
 status: "experimental"
 year_of_creation: "2012"
 documentation_url: "https://github.com/libyal/libfsrefs/tree/main/documentation"
-features: ["debug_output"]
+features: ["debug_output", "ossfuzz", "tools"]
 
 [library]
 description: "Library to access the Resiliant File System (ReFS) format"
+features: ["pthread", "wide_character_type"]
 public_types: ["file_entry", "volume"]
 
 [tools]
